# rocinante

./: 1  Cargo.toml  README.md  run_tests.sh  test-with-trans
.github/workflows/: rust.yaml
benches/: eval.rs  runtime.rs  thread_rng.rs  verify.rs
examples/: brahma-convert.wat  channel.rs  component.rs  iterator.rs  local.wat  use-local.wat  wasm2wat.rs  z3.rs
examples/add/: add.wast  add.wat
examples/functional/: convert.wat
examples/hackers_delight/: p1.wat  p10.wat  p11.wat  p12.wat  p13.wat  p14.wat  p15.wat  p16.wat  p17.wat  p18.wat  p19.wat  p2.wat  p20.wat  p3.wat  p4.wat  p5.wat  p6.wat  p7.wat  p8.wat  p9.wat
examples/hackers_delight/variants/p1/: p1-1.wat  p1-2.wat  p1-3.wat  p1-4.wat  p1-dead.wat
examples/hackers_delight/variants/p10/: p10-1.wat  p10-10.wat  p10-11.wat  p10-2.wat  p10-3.wat  p10-4.wat  p10-5.wat  p10-6.wat  p10-7.wat  p10-8.wat  p10-9.wat
examples/hackers_delight/variants/p11/: p11-1.wat  p11-10.wat  p11-2.wat  p11-3.wat  p11-4.wat  p11-5.wat  p11-6.wat  p11-7.wat  p11-8.wat  p11-9.wat
examples/hackers_delight/variants/p12/: p12-1.wat  p12-10.wat  p12-2.wat  p12-3.wat  p12-4.wat  p12-5.wat  p12-6.wat  p12-7.wat  p12-8.wat  p12-9.wat
examples/hackers_delight/variants/p13/: p13-1.wat  p13-2.wat  p13-3.wat  p13-4.wat  p13-5.wat  p13-6.wat  p13-7.wat  p13-8.wat
examples/hackers_delight/variants/p17/: p17-1.wat  p17-2.wat  p17-3.wat  p17-4.wat  p17-5.wat  p17-6.wat  p17-7.wat
examples/hackers_delight/variants/p2/: p2-1.wat  p2-2.wat  p2-3.wat  p2-4.wat  p2-5.wat  p2-dead.wat
examples/hackers_delight/variants/p7/: p7-1.wat  p7-2.wat  p7-3.wat  p7-4.wat  p7-5.wat  p7-6.wat  p7-7.wat  p7-8.wat
examples/montmul/: README.md  mont_mul.cc  mont_mul.wasm  mont_mul.wat
examples/shift/: shift-twice.wat  shift.wasm
examples/shift-wasm/: Cargo.toml  README.md  shift-twice.wat  test.wast
examples/shift-wasm/src/: lib.rs
examples/times-two/: README.md  add.wat  mul-three.wat  mul-two.wat  shl.wat  test.smt2  test.wast
src/: .lib.rs.swp  debug.rs  exec.rs  lib.rs  main.rs  utils.rs  verify.rs
src/candidate/: mod.rs
src/enumerative/: .mod.rs.swp  mod.rs
src/exec/: mod.rs  wasmer.rs  wasmi.rs  wasmtime.rs
src/parity_wasm_utils/: mod.rs
src/solver/: .z3.rs.swp  mod.rs  z3.rs
src/stoke/: .mod.rs.swp  candidate.rs  generator.rs  mod.rs  spec.rs  transform.rs  whitelist.rs
src/wasm/: candidate.rs  mod.rs  spec.rs  whitelist.rs
src/wasmi_utils/: mod.rs
tests/: verify.rs
