[package]
name = "rocinante"
version = "0.1.0"
authors = [
    "Taegyun Kim <k.taegyun@gmail.com",
    "Anirudh Sivaraman <sk.anirudh@gmail.com>"
]
edition = "2018"
readme = "README.md"
categories = ["wasm"]
repository = "https://github.com/wasm-superopt/rocinante"
homepage = "https://github.com/wasm-superopt/rocinante"
description = """
A superoptimizer for WebAssembly
"""

[lib]
name = "rocinante"
path = "src/lib.rs"

[[bin]]
name = "print"
path = "src/bin/print.rs"

[dependencies]
clap = "*"
parity-wasm = "*"
rand = "*"
wabt = "*"
wasmi =  "*"
wasmparser = "*"
wat = "*"
z3 = "*"

[dev-dependencies]
anyhow = "*"
env_logger = "*"
getopts = "*"
log = "*"
wasmprinter = "*"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = [
    "run-for-all",
    "precommit-hook",
    "run-cargo-test",
    "run-cargo-fmt",
    "run-cargo-clippy"
]
