[package]
name = "rocinante"
version = "0.1.0"
authors = [
    "Taegyun Kim <k.taegyun@gmail.com",
    "Anirudh Sivaraman <sk.anirudh@gmail.com>"
]
edition = "2018"
readme = "README.md"
categories = ["wasm"]
repository = "https://github.com/wasm-superopt/rocinante"
homepage = "https://github.com/wasm-superopt/rocinante"
description = """
A superoptimizer for WebAssembly
"""

[dependencies]
clap = "*"
parity-wasm = "*"
rand = "*"
strum = "*"
strum_macros = "*"
wabt = "*"
wasmer-runtime = "*"
wasmi = "*"
wasmparser = "*"
wasmtime = "*"
wast = "*"
wat = "*"
z3 = "*"

[dev-dependencies]
anyhow = "*"
bus = "*"
criterion = "*"
env_logger = "*"
getopts = "*"
log = "*"
matches = "*"
num_cpus = "*"
wasmprinter = "*"

[[bench]]
name = "runtime"
harness = false

[[bench]]
name = "thread_rng"
harness = false

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = [
    "run-for-all",
    "precommit-hook",
    "run-cargo-test",
    "run-cargo-fmt",
    "run-cargo-clippy"
]
