[package]
name = "rocinante"
version = "0.1.0"
authors = [
    "Taegyun Kim <k.taegyun@gmail.com",
    "Anirudh Sivaraman <sk.anirudh@gmail.com>"
]
edition = "2018"
readme = "README.md"
categories = ["wasm"]
repository = "https://github.com/wasm-superopt/rocinante"
homepage = "https://github.com/wasm-superopt/rocinante"
description = """
A superoptimizer for WebAssembly
"""

[dependencies]
chrono = "*"
clap = "*"
num_cpus = "*"
parity-wasm = "*"
rand = "*"
strum = "*"
strum_macros = "*"
timer = "*"
wabt = "*"
wasmer-runtime = { version = "*", default-features = false, features = [
    "singlepass",
    "default-backend-singlepass"
] }
wasmi = "*"
wasmparser = "*"
wasmprinter = "*"
wasmtime = "*"
wast = "*"
wat = "*"
z3 = "*"

[dev-dependencies]
anyhow = "*"
bus = "*"
criterion = "*"
env_logger = "*"
getopts = "*"
log = "*"
matches = "*"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = [
    "run-for-all",
    "precommit-hook",
    "run-cargo-test",
    "run-cargo-fmt",
    "run-cargo-clippy"
]

[[bench]]
name = "runtime"
harness = false

[[bench]]
name = "thread_rng"
harness = false

[[bench]]
name = "call"
harness = false

[[bench]]
name = "verify"
harness = false

[lib]
name = "rocinante"
path = "src/lib.rs"

[[bin]]
name = "rocinante"
path = "src/main.rs"
